# box2d-rs

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: coverage.yml  rust.yml
examples/testbed/: clipboard.rs  draw.rs  draw_private.rs  main.rs  main_loop.rs  settings.rs  test.rs  test_private.rs  test_serialize.rs
examples/testbed/tests/: add_pair.rs  apply_force.rs  body_types.rs  box_stack.rs  breakable.rs  bridge.rs  bullet_test.rs  cantilever.rs  car.rs  chain.rs  chain_problem.rs  character_collision.rs  circle_stack.rs  collision_filtering.rs  collision_processing.rs  compound_shapes.rs  compound_shapes_old.rs  confined.rs  continuous_test.rs  convex_hull.rs  conveyor_belt.rs  distance_joint.rs  distance_test.rs  dominos.rs  dump_loader.rs  dynamic_tree.rs  edge_shapes.rs  edge_test.rs  friction.rs  gear_joint.rs  heavy1.rs  heavy2.rs  mobile_balanced.rs  mobile_unbalanced.rs  mod.rs  motor_joint.rs  pinball.rs  platformer.rs  polygon_collision.rs  polygon_shapes.rs  (+22 more)
src/: b2_body.rs  b2_broad_phase.rs  b2_collision.rs  b2_common.rs  b2_contact.rs  b2_contact_manager.rs  b2_distance.rs  b2_draw.rs  b2_dynamic_tree.rs  b2_fixture.rs  b2_growable_stack.rs  b2_joint.rs  b2_math.rs  b2_rope.rs  b2_settings.rs  b2_shape.rs  b2_time_of_impact.rs  b2_time_step.rs  b2_timer.rs  b2_world.rs  b2_world_callbacks.rs  b2rs_common.rs  b2rs_double_linked_list.rs  double_linked_list.rs  lib.rs  linked_list.rs  serialize_b2_body.rs  serialize_b2_fixture.rs  serialize_b2_joint.rs  serialize_b2_world.rs  serialize_context.rs
src/joints/: b2_distance_joint.rs  b2_friction_joint.rs  b2_gear_joint.rs  b2_motor_joint.rs  b2_mouse_joint.rs  b2_prismatic_joint.rs  b2_pulley_joint.rs  b2_revolute_joint.rs  b2_rope_joint.rs  b2_weld_joint.rs  b2_wheel_joint.rs  mod.rs
src/joints/serialize/: mod.rs  serialize_b2_distance_joint.rs  serialize_b2_friction_joint.rs  serialize_b2_gear_joint.rs  serialize_b2_motor_joint.rs  serialize_b2_prismatic_joint.rs  serialize_b2_pulley_joint.rs  serialize_b2_revolute_joint.rs  serialize_b2_rope_joint.rs  serialize_b2_weld_joint.rs  serialize_b2_wheel_joint.rs
src/private/: mod.rs
src/private/collision/: b2_broad_phase.rs  b2_chain_shape.rs  b2_circle_shape.rs  b2_collide_circle.rs  b2_collide_edge.rs  b2_collide_polygon.rs  b2_collision.rs  b2_distance.rs  b2_dynamic_tree.rs  b2_edge_shape.rs  b2_polygon_shape.rs  b2_time_of_impact.rs  mod.rs
src/private/common/: b2_math.rs  mod.rs
src/private/dynamics/: b2_body.rs  b2_contact.rs  b2_joint.rs  (+10 more)
src/serialize/: mod.rs  serialize_b2_body.rs  serialize_b2_fixture.rs  serialize_b2_joint.rs  serialize_b2_world.rs
src/shapes/: b2_chain_shape.rs  b2_circle_shape.rs  b2_edge_shape.rs  b2_polygon_shape.rs  mod.rs  serialize_b2_polygon_shape.rs  to_derived_shape.rs
tests/: collision_test.rs  joint_test.rs  math_test.rs  test.rs  world_test.rs
(+22 files in other folders)
