[package]
name = "box2d-rs"
version = "0.0.2"
authors = ["HumMan <kop3nha@gmail.com>"]
repository = "https://github.com/humman/box2d-rs"
description = "Port of Box2d to Rust"
readme = "README.md"
license = "MIT"
edition = "2018"

[dependencies]
bitflags = "1.2.1"
serde = {version = "1.0.111", features = ["derive"],  optional = true}
strum = {version = "0.19",  optional = true}
strum_macros = {version ="0.19",  optional = true}

[features]
serde_support = ["serde", "strum", "strum_macros"]

[dev-dependencies]
clipboard = "0.5"
glium = { version = "0.27", default-features = true }
image = "0.23"
imgui = "0.4.0"
imgui-glium-renderer = "0.4.0"
imgui-winit-support = "0.4.0"
rand = "0.7"
itertools = "0.9"
serde = {version = "1.0.111", features = ["derive"]}
strum = {version = "0.19"}
strum_macros = {version ="0.19"}
serde_json = "1.0.55"
bincode = "1.3.1"
serde_yaml = "0.8"