[package]
name = "box2d-rs"
version = "0.0.2"
authors = ["HumMan <kop3nha@gmail.com>"]
repository = "https://github.com/humman/box2d-rs"
description = "Port of Box2d to Rust"
readme = "README.md"
license = "MIT"
edition = "2018"

[dependencies]
bitflags = "1.3.2"
serde = {version = "1.0.132", features = ["derive"],  optional = true}
strum = {version = "0.23",  optional = true}
strum_macros = {version ="0.23",  optional = true}

[features]
serde_support = ["serde", "strum", "strum_macros"]

[dev-dependencies]
clipboard = "0.5"
glium = { version = "0.27", default-features = true }
image = "0.23.14"
imgui = "0.4"
imgui-glium-renderer = "0.4"
imgui-winit-support = "0.4"
rand = "0.7"
itertools = "0.10.3"
serde = {version = "1.0.132", features = ["derive"]}
strum = {version = "0.23"}
strum_macros = {version ="0.23"}
serde_json = "1.0.73"
bincode = "1.3.3"
serde_yaml = "0.8.23"