[package]
name = "box2d-rs"
version = "0.0.4"
authors = ["HumMan <kop3nha@gmail.com>"]
repository = "https://github.com/humman/box2d-rs"
description = "Port of Box2d to Rust"
readme = "README.md"
license = "MIT"
edition = "2021"
rust-version = "1.51.0"
exclude = [
    "resources/*"
]

[dependencies]
bitflags = "2.2.1"
serde = {version = "1.0.163", features = ["derive"],  optional = true}
strum = {version = "0.24.1",  optional = true}
strum_macros = {version ="0.24.3",  optional = true}

[features]
serde_support = ["serde", "strum", "strum_macros"]

[dev-dependencies]
clipboard = "0.5.0"
glium = { version = "0.32.1", default-features = true }
image = "0.24.6"
imgui = "0.11.0"
imgui-glium-renderer = "0.11.0"
imgui-winit-support = "0.11.0"
rand = "0.8.5"
itertools = "0.10.5"
serde = {version = "1.0.163", features = ["derive"]}
strum = {version = "0.24.1"}
strum_macros = {version ="0.24.3"}
serde_json = "1.0.96"
bincode = "1.3.3"
serde_yaml = "0.9.21"
